export interface CahierDeCharge {
  fileName: string;
  mimeType: string;
  size: number;
  base64: string;
}

