export interface OrgService { id: string; name: string; }

